...
    "Add %@ to log" : {

    },
    "Add %lld milliliters of water" : {

    },
    "Add food" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Añadir comida"
...
        }
      }
    },
    "Clear search" : {

    },
    "Close" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar"
...
            "state" : "translated",
            "value" : "Cena"
          }
        }
      }
    },
    "Done" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Listo"
...
            "state" : "translated",
            "value" : "Ingredientes"
          }
        }
      }
    },
    "Insights" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Estadísticas"
...
    "Scan nutrition label" : {

    },
    "Search" : {

    },
    "Search foods" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Buscar alimentos"
...
    "Set calories manually" : {

    },
    "Set daily goal to %lld kcal" : {

    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ajustes"
...
